node-single/istio/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: node-single
spec:
  host: node-single #.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
