node-single/istio/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-single
spec:
  hosts:
  - "*"
  gateways:
  - node-single-gw
  http:
  - match:
    - uri:
        exact: /node_single
    route:
    - destination:
        host: node-single #.svc.cluster.local
        port:
          number: 14000
    retries:
      attempts: 3
      perTryTimeout: 2s
